public/stylesheets/framework/addins.css
/* ... */
.addin #header {
    height : 42px;
}
.addin #header-logo,
.addin #header-title,
.addin #header-avatar {
    display : none;
}
.addin #header-subtitle {
    border       : none;
    font-size    : 14px;
    font-weight  : 800;
    height       : 42px;
    line-height  : 42px;
    margin       : 0px;
    padding-left : 24px;
}
.addin #header-toolbar {
    height  : 24px;
    margin  : 0px;
    padding : 9px 24px;
}
.addin #header .button {
    margin : 0px;
}
.light-theme #header.dark .button,
 .dark-theme #header.dark .button,
.black-theme #header.dark .button {
    color : var(--color-font);
}
.light-theme #header.dark .button.default,
 .dark-theme #header.dark .button.default,
.black-theme #header.dark .button.default {
    color : white;
}


/*  BUTTONS */
/* ----------------------------------------------------------------------------- */
.addin div.button {
    font-size   : 12px;
    height      : 22px;
    line-height : 22px;
    padding     : 0px 8px;
}
.addin .button.icon {
    height      : 22px;
    line-height : 22px;
    font-size   : 16px;
    padding     : 0px;
    max-width   : 22px;
    min-width   : 22px;
    width       : 22px;
}
.addin .button.with-icon { padding-left : 8px; }
.addin .button.with-icon::before,
.addin .button.with-toggle::after { 
    font-size   : 20px; 
    line-height : 22px; 
    margin-left : 0px;
}
.addin .button.with-toggle { 
    gap       : 8px;
    min-width : unset;
}


/*  PANEL HEADER & CONTENT */
/* ----------------------------------------------------------------------------- */
.addin .panel-title {
    gap       : 10px;
    padding   : 12px 0px 0px 18px;
    min-width : calc(100% - 36px);
    width     : calc(100% - 36px);
}
.addin .panel-title-main {
    font-size   : 14px;
    font-weight : 600;
    height      : 16px;
    line-height : 16px;
}
.addin .panel-title-sub {
    display     : none;
    font-size   : 11px;
    line-height : 14px;
}
.addin .panel-title-sub .panel-status {
    font-size   : 9px;
    height      : 14px;
    line-height : 14px;
}
.addin .panel-summary {
    overflow        : hidden;
    text-overflow   : ellipsis;
    min-width       : unset;
    width           : unset;
}
.addin .panel-controls,
.addin .panel-actions {
    gap      : 4px;
    padding  : 8px 18px 0px;
    position : absolute;
    top      : 0px;
    right    : 0px;
    z-index  : 5;
}
.addin .panel-controls > .panel-search > .button {
    height      : 16px;
    font-size   : 16px;
    line-height : 16px;
    margin-top  : 2px;
    width       : 16px;
}
.addin .panel-top.with-sub-title > .panel-header > .panel-title {
    padding-top : 12px;
}
.addin .panel-top.with-tabs > .panel-content > .panel-top > .panel-header > .panel-controls {
    height  : 22px;
    padding : 0px 6px 0px 0px;
}
.addin .panel-top.with-tabs > .panel-content > .panel-top > .panel-actions {
    left    : 6px;
    right   : unset;
    padding : 0px;
}
.addin .panel-top.with-tabs > .panel-content > .panel-top > .panel-content {
    top : 34px;
}


/*  TABS */
/* ----------------------------------------------------------------------------- */
.addin .item.with-tabs > .panel-tabs,
.addin .panel-tabs {
    top : 46px;
}
.addin .panel-top.with-tabs > .panel-content {
    border-width : 12px;
    top          : 80px;
    right        : 0px;
    bottom       : 0px;
    left         : 0px;
}
.addin .tabs {
    font-size   : 12px;
    padding-top : 0px;
}
.addin .tabs,
.addin .tabs > div {
    height : 28px;
}



/*  PANELS */
/* ----------------------------------------------------------------------------- */
.panel-subtitle {
    background  : rebeccapurple;
    margin      : 5px 0px;
    padding     : 2px 10px;
    text-align  : center;
}
.addin .no-data { 
    margin-top  : 0px;
    position    : absolute;
    top         : calc(50% - 44px);
    left        : calc(50% - 100px);
    text-align  : center;
    width       : 200px;
  }



/*  TILES */
/* ----------------------------------------------------------------------------- */
.addin .tiles.list.xs .tile-image { width : 72px; }
.addin .tile-title { 
    display     : flex;
    font-size   : 12px !important;
    gap         : 12px;
    line-height : 12px;
}
.addin .tile-entity { 
    display     : flex; 
    font-weight : normal;
    gap         : 4px;
}
.addin .tile-entity .icon {
    font-size   : 12px;
    line-height : 14px;
}
.addin .tile-subtitle { font-size : 12px !important; }
.addin .tiles.wide.s { padding-top: var(--spacer-s); }

/* Tile Actions */
.tile-actions {
    display         : none;
    gap             : 4px;
    justify-content : end;
    position        : relative;
}
.tile:hover .tile-actions {
    display : flex;
}
.tile-actions > div:hover {
    background   : var(--color-blue-500) !important;
    border-color : var(--color-blue-500) !important;
    box-shadow   : none !important;
    color        : white;
}

.addin .tiles.list.m > .tile { gap: 14px; height: 48px; }
.addin .tiles.list.m .tile-counter { line-height : 48px; font-size : 22px; }
.addin .tiles.list.m .tile-image { height: 48px; line-height: 48px; font-size: 28px; max-width: 48px; min-width: 48px; width: 48px; }
.addin .tiles.list.m .attachment-graphic > img { height: 28px; width: 28px; }
.addin .tiles.list.m .tile-details { margin: 6px 12px 0px 0px; }
.addin .tiles.list.m .tile-title { line-height: 20px; }

.addin .tiles.list.xxs .tile-actions { top :  1px; right :  2px; gap : 2px; }
.addin .tiles.list.xs  .tile-actions { top :  5px; right :  5px; gap : 5px; }
.addin .tiles.list.m   .tile-actions { top : 12px; right : 12px;            }




/*  TABLES */
/* ----------------------------------------------------------------------------- */
.addin .content-column-number {
    max-width : 28px;
    width     : 28px;
}
.addin .table-check-box {
    max-width : 24px;
    min-width : 24px;
    width     : 24px;
}
.addin .table-group-title::before {
    font-size : 16px;
    top       : 4px;
}
/* ... */

